--- a/packages/components/TextField/Label/Label.css
+++ b/packages/components/TextField/Label/Label.css
@@ -1,22 +1,20 @@
-.Label {
-  position: absolute;
-  font: inherit;
-  line-height: inherit;
-  color: rgba(0, 0, 0, 0.5);
-  transform-origin: top left;
-  padding: 0 1em;
-}
+@value error from "../../style/colors.css";
 
-.Label:not(.shrink) {
-  opacity: 0;
+.label {
+  color: rgba(0, 0, 0, 0.5);
+  font: inherit;
+  left: 1em;
+  line-height: inherit;
+  position: absolute;
+  top: 0;
+  transform-origin: top left;
+  transition: transform 100ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
 }
 
 .shrink {
-  opacity: 1;
-  transform: translate(4px, -0.5em) scale(calc(10/14));
-  transition: transform 100ms cubic-bezier(0.0, 0, 0.2, 1) 0ms, opacity 100ms cubic-bezier(0.0, 0, 0.2, 1);
+  transform: translate(0, -0.5em) scale(calc(10 / 14));
 }
 
 .error {
-  color: #ef5733;
+  color: error;
 }
