--- a/packages/components/TextField/TextField.css
+++ b/packages/components/TextField/TextField.css
@@ -1,31 +1,20 @@
-.TextField {
-  position: relative;
-  margin: 4px 0 1rem;
+@value (border,
+border--focused,
+border--error) from "../style/colors.css";
+
+.wrapper {
+  border: 2px solid border;
+  border-radius: 4px;
+  display: flex;
   font-size: 14px;
   line-height: 3;
-  color: #012939;
-}
-
-.TextField::before {
-  position: absolute;
-  content: "";
-  box-shadow: 0 0 0 2px #e0e0e0;
-  transition: box-shadow 200ms cubic-bezier(0.075, 0.82, 0.165, 1);
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  border-radius: 4px;
+  margin: 4px 0 1rem;
+  position: relative;
   z-index: 0;
-  pointer-events: none;
 }
 
 .small {
   line-height: 2;
-}
-
-.focused::before {
-  box-shadow: 0 0 0 2px #ddc30f;
 }
 
 .large {
@@ -33,11 +22,38 @@
   line-height: 4;
 }
 
-.error::before {
-  box-shadow: 0 0 0 2px #ef5733;
+.large>label {
+  line-height: 2;
 }
 
-.multiline {
-  padding-top: 1em;
-  line-height: 1.5;
+.wrapper:not(.small) ::placeholder {
+  opacity: 0;
+}
+
+.field {
+  border-radius: 4px;
+  position: relative;
+  width: 100%;
+}
+
+.field:not(:first-child) {
+  border-bottom-left-radius: 0;
+  border-top-left-radius: 0;
+}
+
+.field:not(:last-child) {
+  border-bottom-right-radius: 0;
+  border-top-right-radius: 0;
+}
+
+.multiline .field {
+  padding-top: 12px;
+}
+
+.focused .field {
+  box-shadow: 0 0 0 2px border--focused;
+}
+
+.error .field {
+  box-shadow: 0 0 0 2px border--error;
 }
