--- a/packages/components/TextField/Label/Label.css
+++ b/packages/components/TextField/Label/Label.css
@@ -1,14 +1,12 @@
-@value error from "@atlantis/styles/colors.css";
-
 .label {
-  color: rgba(0, 0, 0, 0.5);
-  font: inherit;
-  left: 1em;
-  line-height: inherit;
   position: absolute;
   top: 0;
-  transform-origin: top left;
+  left: 1em;
+  font: inherit;
+  line-height: inherit;
+  color: rgba(0, 0, 0, 0.5);
   transition: transform 100ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
+  transform-origin: top left;
 }
 
 .shrink {
@@ -16,5 +14,5 @@
 }
 
 .error {
-  color: error;
+  color: var(--error);
 }
