--- a/packages/styles/colors.css
+++ b/packages/styles/colors.css
@@ -2,5 +2,5 @@
   --error: #ef5733;
   --border: #e0e0e0;
   --border-focused: #ddc30f;
-  --border--error: var(--error)
+  --border-error: var(--error)
 }
