--- a/packages/components/TextField/Label/Label.css
+++ b/packages/components/TextField/Label/Label.css
@@ -4,7 +4,7 @@
   left: 1em;
   font: inherit;
   line-height: inherit;
-  color: rgba(0, 0, 0, 0.5);
+  color: var(--text-color, rgba(0, 0, 0, 0.5));
   transition: transform 100ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
   transform-origin: top left;
 }
@@ -14,5 +14,5 @@
 }
 
 .error {
-  color: var(--error);
+  --text-color: var(--error);
 }
