--- a/packages/components/src/PlaceholderField.css
+++ b/packages/components/src/PlaceholderField.css
@@ -46,7 +46,7 @@
 .inputWrapper input:not(:placeholder-shown) + .labelContent {
   --input-label-transform: scale(0.75) translate(5px, -100%);
   opacity: 1;
-  transition: transform 100ms ease-out, opacity 100ms ease-in;
+  transition: transform 100ms;
 }
 
 .labelContent {
@@ -56,7 +56,7 @@
   padding-left: 1rem;
   transform: var(--input-label-transform, none);
   transform-origin: top left;
-  transition: opacity 20ms;
+  transition: transform 100ms, opacity 60ms;
   opacity: 0;
   pointer-events: none;
 }
