--- a/packages/components/src/TextField/TextField.css
+++ b/packages/components/src/TextField/TextField.css
@@ -1,23 +1,3 @@
-:root {
-  --label-text-color: rgb(101, 120, 132);
-}
-
-.inputWrapper {
-  height: var(--input-height);
-  margin-bottom: 1rem;
-}
-
-.inputWrapper:focus-within {
-  --input-border-color: rgb(221, 195, 15);
-}
-
-.error,
-.error:focus-within,
-.error:hover {
-  --input-border-color: rgb(239, 87, 51);
-  --label-text-color: rgba(239, 87, 51);
-}
-
 .small {
   --input-height: 2em;
 }
@@ -31,42 +11,44 @@
   font-size: 1.125em;
 }
 
+.error,
+.error:focus-within,
+.error:hover {
+  --input-border-color: rgb(239, 87, 51);
+  --label-text-color: rgba(239, 87, 51);
+}
+
+.inputWrapper {
+  height: var(--input-height);
+  margin-bottom: 1rem;
+}
+
+.inputWrapper:focus-within {
+  --input-border-color: rgb(221, 195, 15);
+}
+
+.label,
+.input::placeholder {
+  color: var(--label-text-color, rgb(101, 120, 132));
+}
+
 .label {
   position: relative;
   display: flex;
   width: 100%;
   height: 100%;
-  color: var(--label-text-color);
-}
-
-.multiline .label:before {
-  position: absolute;
-  top: 2px;
-  right: 1rem;
-  left: 1rem;
-  display: block;
-  height: 0.8em;
-  background-color: rgb(255, 255, 255);
-  content: "";
 }
 
 .input {
   width: 100%;
-  padding: 1px 1rem;
+  padding: 0 1rem;
   font-family: inherit;
   font-size: inherit;
-  line-height: 1.25;
-  background-color: var(--input-background-color);
+  background-color: var(--input-background-color, rgb(255, 255, 255));
   border: 2px solid var(--input-border-color, rgb(225, 225, 225));
   border-radius: 4px;
   outline: none;
   box-sizing: border-box;
-}
-
-.input::placeholder {
-  display: block !important;
-  color: var(--label-text-color);
-  transition: all 0ms linear 500ms;
 }
 
 .input:disabled {
@@ -74,25 +56,15 @@
   opacity: 0.6;
 }
 
-.multiline .input {
-  padding-top: 0.75em;
-  padding-bottom: 0.75em;
-  resize: vertical;
-}
-
-.autoexpand .input {
-  resize: none;
-}
-
 .labelContent {
   position: absolute;
   left: 1rem;
   width: 100%;
+  padding: 2px;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
   pointer-events: none;
-  border: 2px solid transparent;
   opacity: 0;
   transform: var(--input-label-transform, none);
   transition: transform 100ms, opacity 100ms;
