--- a/packages/components/src/InlineLabel/InlineLabel.css
+++ b/packages/components/src/InlineLabel/InlineLabel.css
@@ -34,6 +34,7 @@
 .inlineLabel {
   display: inline-block;
   padding: 0.5em 0.66em;
+  text-align: center;
   text-transform: uppercase;
   border-radius: 4px;
 }
