--- a/packages/components/src/Table/Table.css
+++ b/packages/components/src/Table/Table.css
@@ -9,12 +9,8 @@
   border-collapse: collapse;
 }
 
-.row {
+.row:not(:last-child) {
   border-bottom: solid 1px var(--border-color);
-}
-
-.row:last-child {
-  border: none;
 }
 
 .header .row {
