--- a/packages/components/src/Table/Cells/Cell.css
+++ b/packages/components/src/Table/Cells/Cell.css
@@ -2,19 +2,19 @@
   text-align: left;
 }
 
-.cell.left {
+.left {
   text-align: left;
 }
 
-.cell.center {
+.center {
   text-align: center;
 }
 
-.cell.right {
+.right {
   text-align: right;
 }
 
-.cell.numeric {
+.numeric {
   font-feature-settings: "tnum";
 }
 
