--- a/packages/components/src/Document/Document.css
+++ b/packages/components/src/Document/Document.css
@@ -24,6 +24,7 @@
   order: 1;
   display: flex;
   flex: 1 0 auto;
+  min-width: 100%;
   align-items: center;
   padding-bottom: 1rem;
   margin-bottom: 1rem;
