--- a/packages/components/src/Document/Document.css
+++ b/packages/components/src/Document/Document.css
@@ -35,8 +35,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 3.5em;
-  height: 3.5em;
+  width: 3.5rem;
+  height: 3.5rem;
   font-size: 1.5em;
   color: white;
   background-color: var(--accent-color);
