--- a/packages/components/src/DescriptionList/DescriptionList.css
+++ b/packages/components/src/DescriptionList/DescriptionList.css
@@ -1,6 +1,7 @@
 .metadataGroup {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   padding: 0.5rem 0;
 }
 
@@ -10,4 +11,9 @@
 
 .metadataGroup dd {
   margin-inline-start: 0;
+  flex: 1 1 50%;
+}
+
+.metadataGroup dt {
+  flex: 1 1 50%;
 }
