Order and names.

--- a/packages/colors/src/ColorSwatch/ColorSwatch.css
+++ b/packages/colors/src/ColorSwatch/ColorSwatch.css
@@ -1,21 +1,21 @@
-.swatchBox {
+.swatch {
   display: inline-block;
   width: calc(100% / 4 - 0.5rem);
   margin: 0.25rem;
 }
 
-.swatch {
-  height: 60px;
-  border: solid 1px var(--color-blue--dark);
-  border-radius: 0.25rem;
-}
-
-.swatchBox:first-child {
+.swatch:first-child {
   width: calc(100% - 0.5rem);
 }
 
-.colorName,
-.colorValue {
+.color {
+  height: 60px;
+  border: solid 1px var(--color-grey--light);
+  border-radius: 0.25rem;
+}
+
+.name,
+.value {
   width: 100%;
   font-family: monospace;
   font-size: 10px;
