--- a/packages/components/src/Card/Card.css
+++ b/packages/components/src/Card/Card.css
@@ -1,10 +1,9 @@
-@import "../global.css";
-
 .card {
   --background-color: var(--color-grey--lightest);
   --border-color: var(--color-grey--lighter);
   --content-background-color: var(--color-white);
   --min-card-width: 20rem;
+  --accent-color: var(--color-grey);
 
   display: flex;
   min-width: var(--min-card-width);
@@ -17,108 +16,7 @@
 }
 
 .accent {
-  border-top: 0.5rem solid var(--accent-color, var(--color-grey));
-}
-
-.indigo {
-  --accent-color: var(--color-indigo);
-}
-
-.blue {
-  --accent-color: var(--color-blue);
-}
-
-.blueLighter {
-  --accent-color: var(--color-blue--lighter);
-}
-
-.greyBlue {
-  --accent-color: var(--color-grey-blue);
-}
-
-.greyDark {
-  --accent-color: var(--color-grey--dark);
-}
-
-.grey {
-  --accent-color: var(--color-grey);
-}
-
-.greyLight {
-  --accent-color: var(--color-grey--light);
-}
-
-.greyLighter {
-  --accent-color: var(--color-grey--lighter);
-}
-
-.green {
-  --accent-color: var(--color-green);
-}
-
-.lime {
-  --accent-color: var(--color-lime);
-}
-
-.yellowGreen {
-  --accent-color: var(--color-yellow--green);
-}
-
-.yellow {
-  --accent-color: var(--color-yellow);
-}
-
-.red {
-  --accent-color: var(--color-red);
-}
-
-.orange {
-  --accent-color: var(--color-orange);
-}
-
-.pink {
-  --accent-color: var(--color-pink);
-}
-
-.purple {
-  --accent-color: var(--color-purple);
-}
-
-.navy {
-  --accent-color: var(--color-navy);
-}
-
-.lightBlue {
-  --accent-color: var(--color-light-blue);
-}
-
-.lightBlueLighter {
-  --accent-color: var(--color-light-blue--lighter);
-}
-
-.teal {
-  --accent-color: var(--color-teal);
-}
-
-.brown {
-  --accent-color: var(--color-brown);
-}
-
-.white {
-  --accent-color: var(--color-white);
-}
-
-.banner {
-  display: flex;
-  width: 100%;
-  margin-right: 2rem;
-  margin-bottom: 1rem;
-  margin-left: 2rem;
-  border-bottom: 1px solid var(--border-color);
-  order: 1;
-  flex: 1 1 auto;
-  flex-wrap: wrap;
-  align-items: center;
+  border-top: 0.5rem solid var(--accent-color);
 }
 
 .header {
@@ -126,19 +24,7 @@
   padding-left: 2rem;
   hyphens: auto;
   flex: 1 1 calc(100% / 12 * 7 - 4rem);
-  order: 2;
-}
-
-.detail {
-  min-width: calc((5 / 12) * var(--min-card-width));
-  margin-right: 2rem;
-  margin-left: 2rem;
-  padding: 1rem;
-  border-top-right-radius: 4px;
-  border-top-left-radius: 4px;
-  background-color: var(--content-background-color);
-  flex: 1 1 calc(100% / 12 * 5 - 4rem);
-  order: 3;
+  order: 1;
 }
 
 .content {
@@ -147,5 +33,5 @@
   min-height: 1rem;
   padding: 2rem;
   background-color: var(--content-background-color);
-  order: 4;
+  order: 2;
 }
